# signalloom

./: EXPLAINER-VIDEO-BRIEF.md  README.md  SIGNAL-LOOM-SUPPORT-TRAINING.md  _redirects  checkout.html  demo-json.html  demo-transcript.html  demo.html  deploy.sh  guide.html  index.html  mac-users.html  package.json  privacy.html  signal-loom-ai-QA-STRESS-TEST-REPORT.md  signup.html  why-local.html
.github/workflows/: ci.yml  railway.yml
.wrangler/cache/: pages.json
explainer/: concat.txt  concat_daniel.txt  concat_sandy.txt  portfolio-sample.html  script-20s.txt  script.txt
explainer/audio/: full1_daniel.aiff  full1_sandy.aiff  full2_daniel.aiff  full2_sandy.aiff  full3_daniel.aiff  full3_sandy.aiff  full4_daniel.aiff  full4_sandy.aiff  full5_daniel.aiff  full5_sandy.aiff  pitch_daniel.aiff  pitch_sandy.aiff  slide1.aiff  slide2.aiff  slide3.aiff  slide4.aiff  slide5.aiff
functions/: [...path].js
functions/v1/: [...path].js
signal-loom-api/: .gitignore  Dockerfile  README.md  main.py  nixpacks.toml  railway.json  requirements.txt  start.sh
signal-loom-api/core/: __init__.py
signal-loom-api/jobs/: __init__.py
signal-loom-api/middleware/: auth.py
signal-loom-api/monitoring/: __init__.py
signal-loom-api/routers/: __init__.py  admin.py  health.py  models.py  transcribe.py
signal-loom-api/schemas/: __init__.py
signal-loom-api/webhooks/: __init__.py  api_keys.py
signal-loom-landing/: account.html  builders.html  checkout.html  index.html  ingest.html  meetings.html  signup.html  success.html  voice-agents.html  youtube-archive.html
signal-loom-sdk-python/: .gitignore  LICENSE  README.md  pyproject.toml
signal-loom-sdk-python/examples/: async_example.py  quickstart.py
signal-loom-sdk-python/signalloom/: __init__.py  client.py  errors.py  models.py  utils.py
signal-loom-sdk-python/tests/: test_client.py
signal-loom-strategy/: .gitignore  SIGNAL_LOOM_BUSINESS_PLAN.md  SIGNAL_LOOM_MARKETING_STRATEGY.md  SIGNAL_LOOM_QUALITY_STANDARDS.md  SIGNAL_LOOM_SCALING_ROADMAP.md  SIGNAL_LOOM_USE_CASES.md
(+2 files in other folders)
